[package]
authors = ["Joe Ranweiler <josephkennethranweiler@gmail.com>"]
description = "Flexible, stand-alone benchmarking"
keywords = ["benchmark", "perf", "testing"]
name = "liar"
version = "0.1.0"

license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ranweiler/liar"

build = "build.rs"

[dependencies]

[build-dependencies]
rustc_version = "0.2.1"
