[package]
authors = ["Joe Ranweiler <joe@lemma.co>"]
description = "Flexible, stand-alone benchmarking."
keywords = ["benchmark", "no_std", "perf", "testing"]
name = "liar"
version = "0.4.0"

license = "ISC"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ranweiler/liar"

build = "build.rs"

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
rustc_version = "0.2.1"

[features]
default = ["std"]
std = []
