[package]
authors = ["Joe Ranweiler <joe@lemma.co>"]
description = "Flexible, stand-alone benchmarking."
keywords = ["benchmark", "no_std", "perf", "testing"]
name = "liar"
version = "0.5.0"

license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ranweiler/liar"

build = "build.rs"

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[build-dependencies]
rustc_version = "0.2.1"

[features]
default = ["std", "libc"]
std = []
